2018-10-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Minor stm8 peephole improvement, RFE #584.
	* src/z80/gen.c:
	  Fix bug #2801, #2674.

2018-10-15 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-2822.c:
	  Fix bug #2822.
	* src/SDCClospre.cc,
	  support/regression/tests/bug-2820.c:
	  Fix bug #2820.
	* src/SDCCicode.c,
	  support/regression/tests/bug-2805.c:
	  Fix bug #2805.

2018-10-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Use bit transfer instructions for 1-bit bit-field (part of RFE #446).

2018-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-z80.def:
	  Optimizations for 8-bit loop counters (RFE #431).
	* src/stm8/gen.c:
	  Use bit set / reset instructions for 1-bit bit-fields (part of RFE #446).

2018-10-08 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve code generation for 8-bit integers (addition of small constants, paramter passing) (RFE #583).
	* rc/SDCCBBlock.c,
	  src/SDCCBBlock.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h:
	  Improve const use.
	* src/SDCClrange.c,
	  src/SDCClrange.h,
	  src/SDCCopt.c,
	  src/stm8/gen.c,
	  src/z80/peeph-z80.def:
	  Optimize postincrement (RFE #581).

2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix an issue that resulted in overestimation of remat costs.
	* src/stm8/peeph.def:
	  Optimize out dead loads from stack.
	* device/include/asm/*/features.h,
	  device/lib/Makefile.in,
	  device/lib/_memmove.c,
	  device/lib/clean.mk,
	  device/lib/__memcpy.c,
	  device/lib/memcpy.c,
	  device/lib/stm8-large/memcpy.s,
	  device/lib/*/Makefile.in:
	  Library memcpy() cleanup.

2018-10-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Improve wide arithmetic right shift.

2018-10-01 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/ralloc.c,
	  src/stm8/gen.h,
	  src/stm8/gen.c:
	  Basic support for rematerialization of stack addresses.
