@@ -1,3 +1,8 @@
+2018-10-17 Philipp Klaus Krause <pkk AT spth.de>
+
+	* support/regression/tests/bug-2822.c:
+	  Make test work for hc08.
+
 2018-10-16 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/peeph.def:
